feat: impl assignNameAndNumber in CollectivityService